content/docs/2.12/concepts/scaling-deployments.md
+++
title = "Scaling Deployments, StatefulSets & Custom Resources"
weight = 200
+++

## Overview

### Scaling of Deployments and StatefulSets

Deployments and StatefulSets are the most common way to scale workloads with KEDA.

It allows you to define the Kubernetes Deployment or StatefulSet that you want KEDA to scale based on a scale trigger. KEDA will monitor that service and based on the events that occur it will automatically scale your resource out/in accordingly.

Behind the scenes, KEDA acts to monitor the event source and feed that data to Kubernetes and the HPA (Horizontal Pod Autoscaler) to drive rapid scale of a resource.  Each replica of a resource is actively pulling items from the event source.  With KEDA and scaling Deployments/StatefulSet you can scale based on events while also preserving rich connection and processing semantics with the event source (e.g. in-order processing, retries, deadletter, checkpointing).

For example, if you wanted to use KEDA with an Apache Kafka topic as event source, the flow of information would be:

* When no messages are pending processing, KEDA can scale the deployment to zero.
* When a message arrives, KEDA detects this event and activates the deployment.
* When the deployment starts running, one of the containers connects to Kafka and starts pulling messages.
* As more messages arrive at the Kafka Topic, KEDA can feed this data to the HPA to drive scale out.
* Each replica of the deployment is actively processing messages.  Very likely, each replica is processing a batch of messages in a distributed manner.

### Scaling of Custom Resources

With KEDA you can scale any workload defined as any `Custom Resource` (for example `ArgoRollout` [resource](https://argoproj.github.io/argo-rollouts/)). The scaling behaves the same way as scaling for arbitrary Kubernetes `Deployment` or `StatefulSet`.

The only constraint is that the target `Custom Resource` must define `/scale` [subresource](https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definitions/#scale-subresource).

## ScaledObject spec

This specification describes the `ScaledObject` Custom Resource definition which is used to define how KEDA should scale your application and what the triggers are. The `.spec.ScaleTargetRef` section holds the reference to the target resource, ie. `Deployment`, `StatefulSet` or `Custom Resource`.

[`scaledobject_types.go`](https://github.com/kedacore/keda/blob/main/apis/keda/v1alpha1/scaledobject_types.go)

```yaml
apiVersion: keda.sh/v1alpha1
kind: ScaledObject
metadata:
  name: {scaled-object-name}
  annotations:
    scaledobject.keda.sh/transfer-hpa-ownership: "true"      # Optional. Use to transfer an existing HPA ownership to this ScaledObject
    autoscaling.keda.sh/paused-replicas: "0"                # Optional. Use to pause autoscaling of objects
spec:
  scaleTargetRef:
    apiVersion:    {api-version-of-target-resource}         # Optional. Default: apps/v1
    kind:          {kind-of-target-resource}                # Optional. Default: Deployment
    name:          {name-of-target-resource}                # Mandatory. Must be in the same namespace as the ScaledObject
    envSourceContainerName: {container-name}                # Optional. Default: .spec.template.spec.containers[0]
  pollingInterval:  30                                      # Optional. Default: 30 seconds
  cooldownPeriod:   300                                     # Optional. Default: 300 seconds
  idleReplicaCount: 0                                       # Optional. Default: ignored, must be less than minReplicaCount
  minReplicaCount:  1                                       # Optional. Default: 0
  maxReplicaCount:  100                                     # Optional. Default: 100
  fallback:                                                 # Optional. Section to specify fallback options
    failureThreshold: 3                                     # Mandatory if fallback section is included
    replicas: 6                                             # Mandatory if fallback section is included
  advanced:                                                 # Optional. Section to specify advanced options
    restoreToOriginalReplicaCount: true/false               # Optional. Default: false
    horizontalPodAutoscalerConfig:                          # Optional. Section to specify HPA related options
      name: {name-of-hpa-resource}                          # Optional. Default: keda-hpa-{scaled-object-name}
      behavior:                                             # Optional. Use to modify HPA's scaling behavior
        scaleDown:
          stabilizationWindowSeconds: 300
          policies:
          - type: Percent
            value: 100
            periodSeconds: 15
    complexScalingLogic:                                    # Optional. Section to specify complex scaling logic
      formula: {formula-for-fetched-metrics}                # Optional. Formula for calculation
      target: {target-value-to-scale-on}                    # Optional. If metrics are anyhow composed together
      externalCalculators:                                  # Optional. Section for user defined grpc calculation servers
        - name: {name-of-ec}                                # Mandatory if externalCalculators section is given
          url: {url-of-ec-server}                           # Mandatory if externalCalculators section is given
          timeout: {time-to-connect}                        # Mandatory if externalCalculators section is given
          certDirectory: ""                                 # Optional. Defaults to "", no certificates used
  triggers:
  # {list of triggers to activate scaling of the target resource}
```

### Details
```yaml
  scaleTargetRef:
    apiVersion:    {api-version-of-target-resource}  # Optional. Default: apps/v1
    kind:          {kind-of-target-resource}         # Optional. Default: Deployment
    name:          {name-of-target-resource}         # Mandatory. Must be in the same namespace as the ScaledObject
    envSourceContainerName: {container-name}         # Optional. Default: .spec.template.spec.containers[0]
```

The reference to the resource this ScaledObject is configured for. This is the resource KEDA will scale up/down and setup an HPA for, based on the triggers defined in `triggers:`.

To scale Kubernetes Deployments only `name` is needed to be specified, if one wants to scale a different resource such as StatefulSet or  Custom Resource (that defines `/scale` subresource), appropriate `apiVersion` (following standard Kubernetes convention, ie. `{api}/{version}`) and `kind` need to be specified.

`envSourceContainerName` is an optional property that specifies the name of container in the target resource, from which KEDA should try to get environment properties holding secrets etc.  If it is not defined, KEDA will try to get environment properties from the first Container, ie. from `.spec.template.spec.containers[0]`.

**Assumptions:** Resource referenced by `name` (and `apiVersion`, `kind`) is in the same namespace as the ScaledObject

---
#### pollingInterval
```yaml
  pollingInterval: 30  # Optional. Default: 30 seconds
```

This is the interval to check each trigger on. By default, KEDA will check each trigger source on every ScaledObject every 30 seconds.

**Example:** in a queue scenario, KEDA will check the queueLength every `pollingInterval`, and scale the resource up or down accordingly.

---
#### cooldownPeriod
```yaml
  cooldownPeriod:  300 # Optional. Default: 300 seconds
```

The period to wait after the last trigger reported active before scaling the resource back to 0. By default, it's 5 minutes (300 seconds).

The `cooldownPeriod` only applies after a trigger occurs; when you first create your `Deployment` (or `StatefulSet`/`CustomResource`), KEDA will immediately scale it to `minReplicaCount`.  Additionally, the KEDA `cooldownPeriod` only applies when scaling to 0; scaling from 1 to N replicas is handled by the [Kubernetes Horizontal Pod Autoscaler](https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-cooldowndelay).

**Example:** wait 5 minutes after the last time KEDA checked the queue and it was empty. (this is obviously dependent on `pollingInterval`)

---
#### idleReplicaCount

```yaml
  idleReplicaCount: 0   # Optional. Default: ignored, must be less than minReplicaCount
```

> 💡 **NOTE:** Due to limitations in HPA controller the only supported value for this property is 0, it will not work correctly otherwise. See this [issue](https://github.com/kedacore/keda/issues/2314) for more details.

If this property is set, KEDA will scale the resource down to this number of replicas. If there's some activity on target triggers KEDA will scale the target resource immediately to `minReplicaCount` and then will be scaling handled by HPA. When there is no activity, the target resource is again scaled down to `idleReplicaCount`. This setting must be less than `minReplicaCount`.

**Example:** If there's no activity on triggers the target resource is scaled down to `idleReplicaCount` (0), once there is an activity the target resource is immediately scaled to `minReplicaCount` (10) and then up to `maxReplicaCount` (100) as needed. If there's no activity on triggers the resource is again scaled down to `idleReplicaCount` (0).

---
#### minReplicaCount
```yaml
  minReplicaCount: 1   # Optional. Default: 0
```

Minimum number of replicas KEDA will scale the resource down to. By default, it's scale to zero, but you can use it with some other value as well.

---
#### maxReplicaCount
```yaml
  maxReplicaCount: 100 # Optional. Default: 100
```

This setting is passed to the HPA definition that KEDA will create for a given resource and holds the maximum number of replicas of the target resource.

---
#### fallback
```yaml
  fallback:                                          # Optional. Section to specify fallback options
    failureThreshold: 3                              # Mandatory if fallback section is included
    replicas: 6                                      # Mandatory if fallback section is included
```

The `fallback` section is optional. It defines a number of replicas to fall back to if a scaler is in an error state.

KEDA will keep track of the number of consecutive times each scaler has failed to get metrics from its source. Once that value passes the `failureThreshold`, instead of not propagating a metric to the HPA (the default error behaviour), the scaler will, instead, return a normalised metric using the formula:
```
target metric value * fallback replicas
```
Due to the HPA metric being of type `AverageValue` (see below), this will have the effect of the HPA scaling the deployment to the defined number of fallback replicas.

**Example:** When my instance of prometheus is unavailable 3 consecutive times, KEDA will change the HPA metric such that the deployment will scale to 6 replicas.

There are a few limitations to using a fallback:
 - It only supports scalers whose target is an `AverageValue` metric. Thus, it is **not** supported by the CPU & memory scalers, or by scalers whose metric target type is `Value`. In these cases, it will assume that fallback is disabled.
 - It is only supported by `ScaledObjects` **not** `ScaledJobs`.

---
#### advanced
```yaml
advanced:
  restoreToOriginalReplicaCount: true/false        # Optional. Default: false
```

This property specifies whether the target resource (`Deployment`, `StatefulSet`,...) should be scaled back to original replicas count, after the `ScaledObject` is deleted.
Default behavior is to keep the replica count at the same number as it is in the moment of `ScaledObject's` deletion.

For example a `Deployment` with `3 replicas` is created, then `ScaledObject` is created and the `Deployment` is scaled by KEDA to `10 replicas`. Then `ScaledObject` is deleted:
 1. if `restoreToOriginalReplicaCount = false` (default behavior) then `Deployment` replicas count is `10`
 2. if `restoreToOriginalReplicaCount = true` then `Deployment` replicas count is set back to `3` (the original value)

---

```yaml
advanced:
  horizontalPodAutoscalerConfig:                   # Optional. Section to specify HPA related options
    name: {name-of-hpa-resource}                   # Optional. Default: keda-hpa-{scaled-object-name}
    behavior:                                      # Optional. Use to modify HPA's scaling behavior
      scaleDown:
        stabilizationWindowSeconds: 300
        policies:
        - type: Percent
          value: 100
          periodSeconds: 15
```

**`horizontalPodAutoscalerConfig:`**

**`horizontalPodAutoscalerConfig.name`:**

The name of the HPA resource KEDA will create. By default, it's `keda-hpa-{scaled-object-name}`

**`horizontalPodAutoscalerConfig.behavior`:**

Starting from Kubernetes v1.18 the autoscaling API allows scaling behavior to be configured through the HPA behavior field. This way one can directly affect scaling of 1<->N replicas, which is internally being handled by HPA. KEDA would feed values from this section directly to the HPA's `behavior` field. Please follow [Kubernetes documentation](https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#configurable-scaling-behavior) for details.

**Assumptions:** KEDA must be running on Kubernetes cluster v1.18+, in order to be able to benefit from this setting.

---

```yaml
advanced:
  complexScalingLogic:                                    # Optional. Section to specify complex scaling logic
    target: {target-value-to-scale-on}                    # Optional. New target if metrics are anyhow composed together
    formula: {formula-for-fetched-metrics}                # Optional. Formula for calculation
    externalCalculators:                                  # Optional. Section for user defined grpc calculation servers
      - name: {name-of-ec}                                # Mandatory if externalCalculators section is given
        url: {url-of-ec-server}                           # Mandatory if externalCalculators section is given
        timeout: {time-to-connect}                        # Mandatory if externalCalculators section is given
        certDirectory: ""                                 # Optional. Defaults to "", no certificates used
```

**`complexScalingLogic`**

Structure expects atleast one of `formula` or `externalCalculators` to be non-empty. Both can be specified at the same time. If `target` is given, metrics are going to be composed and/or manipulated in a way, that this target will be used to scale on. In this case, `composite-scaler` will be created within KEDA and passed on to HPA. HPA will create a request for metrics for this `composite-scaler` and work with all external metrics at once. Only way to not create the `composite-scaler` with this structure is to use `externalCalculators` without `target` in which case it will manipulate each external metric individually.

**`complexScalingLogic.target`**

Target value to scale on if `composite-scaler` is used. In this case metrics are composed using `formula` and/or `externalCalculators`. All external metrics must be of the same type in order for ScaledObject to be successfully validated.

**`complexScalingLogic.externalCalculators`**

External calculators provide possibility of adding user-defined grpc servers defined by `name` that are available at `url`s, have `timeout` to connect to the server and can be secured using certificates at `certDirectory`. User must provide the certificates. It is expected that `ca.crt`, `tls.crt` and `tls.key` will be present in the directory. Otherwise if `certDirectory` is `""`, KEDA will connect using `insecure.NewCredentials()`. Each `externalCalculator` has it's health status. If any one of them starts failing, `fallback` functionality will be applied after `failureThreshold` is reached. All `externalCalculators` are called in order from top to bottom how they are defined in the SO. If `formula` is defined, it is applied after last `externalCalculator`.

**Example 1**

```yaml
advanced:
  complexScalingLogic:                                    # Optional. Section to specify complex scaling logic
    target: "2"                                           # Optional. New target if metrics are anyhow composed together
    externalCalculators:                                  # Optional. Section for user defined grpc calculation servers
      - name: average_calc                                # Mandatory if externalCalculators section is given
        url: 10.10.10.10:50051                            # Mandatory if externalCalculators section is given
        timeout: 10s                                      # Mandatory if externalCalculators section is given
        certDirectory: ""                                 # Optional. Defaults to "", no certificates used
```
In this example, there exists `pod` that contains image with running server that has implemented `Calculate` method matching the .proto file structure (can be found in `keda/pkg/externalscaling/api`). `url` is endpoint address of this `pod` (with port). All external metrics are passed to the server, where `average` is calculated and 1 final metric is returned. This metric is then returned to HPA.

**Example 2**

```yaml
advanced:
  complexScalingLogic:                                    # Optional. Section to specify complex scaling logic
    target: "2"                                           # Optional. New target if metrics are anyhow composed together
    externalCalculators:                                  # Optional. Section for user defined grpc calculation servers
      - name: average_calc                                # Mandatory if externalCalculators section is given
        url: 10.10.10.10:50051                            # Mandatory if externalCalculators section is given
        timeout: 10s                                      # Mandatory if externalCalculators section is given
        certDirectory: ""                                 # Optional. Defaults to "", no certificates used
      - name: add_calc                                    # Mandatory if externalCalculators section is given
        url: 11.11.11.11:50052                            # Mandatory if externalCalculators section is given
        timeout: 10s                                      # Mandatory if externalCalculators section is given
        certDirectory: ""                                 # Optional. Defaults to "", no certificates used
```

In this example, we have 2 random triggers that return values of 3 and 5. Fetched metrics are sent to `externalCalculator` `average_calc`. This returns average value `(3+5)/2=4`. Subsequently `externalCalculator` `add_calc` is called, adding the number 5 to the metric. Final metric value is therefore `4+5=9`. Because `target` is 2, replica count will be 5 (value of 4.5).

**`complexScalingLogic.formula`**

Mathematical and/or conditional formula using https://github.com/antonmedv/expr for advanced scaling options. Formula always composes given metrics and therefore `target` is required to scale on. `formula` can be specified with `externalCalculators` in which case it can contain last `externalCalculators.name` to manipulate with its metrics because `formula` is evaluated after all `externalCalculators`. If `formula` is defined, all external triggers **must** have their names defined.

**Example 1**

```yaml
advanced:
  complexScalingLogic:                                    # Optional. Section to specify complex scaling logic
    target: "4"                                           # Optional. New target if metrics are anyhow composed together
    formula: "m_trig + kw_trig"                           # Optional. Formula for calculation
    ...
triggers:
  - type: kubernetes-workload
    name: kw_trig
    metadata:
      podSelector: pod=workload-test
      value: '1'
  - type: metrics-api
    name: m_trig
    metadata:
      targetValue: '2'
      url: https://mockbin.org/bin/336a8d99-9e09-4f1f-979d-851a6d1b1423
      valueLocation: tasks
```

In this example, there exists deployment with label `workload-test` for trigger `kubernetes-workload`. Url for `metrics-api` trigger returns fixed value of 3. Workload deployment is scaled to 5 replicas. Therefore `kw_trig` returns metric value of 5, `m_trig` returns value of 3. `formula` is then applied, 5 + 3 = 8. `complexScalingLogic.target` is 4, therefore target deployment will be scaled to 2 replicas.

**Example 2 combining both**

```yaml
advanced:
  complexScalingLogic:                                    # Optional. Section to specify complex scaling logic
    target: "4"                                           # Optional. New target if metrics are anyhow composed together
    formula: "add_calc + 4"                               # Optional. Formula for calculation
    externalCalculators:                                  # Optional. Section for user defined grpc calculation servers
      - name: average_calc                                # Mandatory if externalCalculators section is given
        url: 10.10.10.10:50051                            # Mandatory if externalCalculators section is given
        timeout: 10s                                      # Mandatory if externalCalculators section is given
        certDirectory: ""                                 # Optional. Defaults to "", no certificates used
      - name: add_calc                                    # Mandatory if externalCalculators section is given
        url: 11.11.11.11:50052                            # Mandatory if externalCalculators section is given
        timeout: 10s                                      # Mandatory if externalCalculators section is given
        certDirectory: ""                                 # Optional. Defaults to "", no certificates used
    ...
triggers:
  - type: kubernetes-workload
    name: kw_trig
    metadata:
      podSelector: pod=workload-test
      value: '1'
  - type: metrics-api
    name: m_trig
    metadata:
      targetValue: '2'
      url: https://mockbin.org/bin/336a8d99-9e09-4f1f-979d-851a6d1b1423
      valueLocation: tasks
```

In this example, both `formula` and `externalCalculators` are used. Workload deployment has 5 replicas. Fetched metrics are passed through `average_calc` (`(3+5)/2 = 4`) and `add_calc`(`4+2=6`) in this order respectfully and then  subsequently `formula` is applied(`6+4=10`). Target is 4 therefore deployment is scaled to 3 replicas (`10/4=2.5`)

---

#### triggers
```yaml
  triggers:
  # {list of triggers to activate scaling of the target resource}
```

> 💡 **NOTE:** You can find all supported triggers [here](/scalers).

Trigger fields:
- **type**: The type of trigger to use. (Mandatory)
- **metadata**: The configuration parameters that the trigger requires. (Mandatory)
- **name**: Name for this trigger. This value can be used to easily distinguish this specific trigger and its metrics when consuming [Prometheus metrics](../operate/prometheus.md). By default, the name is generated from the trigger type. (Optional)
- **useCachedMetrics**: Enables caching of metric values during polling interval (as specified in `.spec.pollingInterval`). For more information, see ["Caching Metrics"](#caching-metrics). (Values: `false`, `true`, Default: `false`, Optional)
- **authenticationRef**: A reference to the `TriggerAuthentication` or `ClusterTriggerAuthentication` object that is used to authenticate the scaler with the environment.
  - More details can be found [here](./authentication). (Optional)
- **metricType**: The type of metric that should be used. (Values: `AverageValue`, `Value`, `Utilization`, Default: `AverageValue`, Optional)
  - Learn more about how the [Horizontal Pod Autoscaler (HPA) calculates `replicaCount`](https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/) based on metric type and value.
  - To show the differences between the metric types, let's assume we want to scale a deployment with 3 running replicas based on a queue of messages:
    - With `AverageValue` metric type, we can control how many messages, on average, each replica will handle. If our metric is the queue size, the threshold is 5 messages, and the current message count in the queue is 20, HPA will scale the deployment to 20 / 5 = 4 replicas, regardless of the current replica count.
    - The `Value` metric type, on the other hand, can be used when we don't want to take the average of the given metric across all replicas. For example, with the `Value` type, we can control the average time of messages in the queue. If our metric is average time in the queue, the threshold is 5 milliseconds, and the current average time is 20 milliseconds, HPA will scale the deployment to 3 * 20 / 5 = 12.

> ⚠️ **NOTE:** All scalers, except CPU and Memory, support metric types `AverageValue` and `Value` while CPU and Memory scalers both support `AverageValue` and `Utilization`.

### Caching Metrics

This feature enables caching of metric values during polling interval (as specified in `.spec.pollingInterval`). Kubernetes (HPA controller) asks for a metric every few seconds (as defined by `--horizontal-pod-autoscaler-sync-period`, usually 15s), then is this request routed to KEDA Metrics Server, that by default queries the scaler and reads the metric values. Enabling this feature changes this behavior, KEDA Metris Server tries to read metric from the cache first. This cache is being updated periodically during the polling interval.

Enabling this feature can significantly reduce the load on the scaler service.

This feature is not supported for `cpu`, `memory` or `cron` scaler.

### Pause autoscaling

It can be useful to instruct KEDA to pause autoscaling of objects, if you want to do to cluster maintenance or you want to avoid resource starvation by removing non-mission-critical workloads. You can enable this by adding the below annotation to your `ScaledObject` definition:

```yaml
metadata:
  annotations:
    autoscaling.keda.sh/paused-replicas: "0"
```

The presensce of this annotation will pause autoscaling no matter what number of replicas is provided. The above annotation will scale your current workload to 0 replicas and pause autoscaling. You can set the value of replicas for an object to be paused at to any arbitary number. To enable autoscaling again, simply remove the annotation from the `ScaledObject` definition.

### Activating and Scaling thresholds

To give a consistent solution to this problem, KEDA has 2 different phases during the autoscaling process.

- **Activation phase:** The activating (or deactivating) phase is the moment when KEDA (operator) has to decide if the workload should be scaled from/to zero. KEDA takes responsibility for this action based on the result of the scaler `IsActive` function and only applies to 0<->1 scaling. There are use-cases where the activating value (0-1 and 1-0) is totally different than 0, such as workloads scaled with the Prometheus scaler where the values go from -X to X.
- **Scaling phase:** The scaling phase is the moment when KEDA has decided to scale out to 1 instance and now it is the HPA controller who takes the scaling decisions based on the configuration defined in the generated HPA (from ScaledObject data) and the metrics exposed by KEDA (metrics server). This phase applies the to 1<->N scaling.

#### Managing Activation & Scaling Thresholds

KEDA allows you to specify different values for each scenario:

- **Activation:** Defines when the scaler is active or not and scales from/to 0 based on it.
- **Scaling:** Defines the target value to scale the workload from 1 to _n_ instances and vice versa. To achieve this, KEDA passes the target value to the Horizontal Pod Autoscaler (HPA) and the built-in HPA controller will handle all the autoscaling.

> ⚠️ **NOTE:** If the minimum replicas is >= 1, the scaler is always active and the activation value will be ignored.

Each scaler defines parameters for their use-cases, but the activation will always be the same as the scaling value, appended by the prefix `activation` (ie: `threshold` for scaling and `activationThreshold` for activation).

There are some important topics to take into account:

- Opposite to scaling value, the activation value is always optional and the default value is 0.
- The activation value has more priority than the scaling value in case of different decisions for each. ie: `threshold: 10` and `activationThreshold: 50`, in case of 40 messages the scaler is not active and it'll be scaled to zero even the HPA requires 4 instances.

> ⚠️ **NOTE:** If a scaler doesn't define "activation" parameter (a property that starts with `activation` prefix), then this specific scaler doesn't support configurable activation value and the activation value is always 0.

## Transfer ownership of an existing HPA

If your environment already operates using kubernetes HPA, you can transfer the ownership of this resource to a new ScaledObject:

```yaml
metadata:
  annotations:
    scaledobject.keda.sh/transfer-hpa-ownership: "true"
spec:
   advanced:
      horizontalPodAutoscalerConfig:
      name: {name-of-hpa-resource}
```

> ⚠️ **NOTE:** You need to specify a custom HPA name in your ScaledObject matching the existing HPA name you want it to manage.


## Long-running executions

One important consideration to make is how this pattern can work with long-running executions.  Imagine a deployment triggers on a RabbitMQ queue message.  Each message takes 3 hours to process.  It's possible that if many queue messages arrive, KEDA will help drive scaling out to many replicas - let's say 4.  Now the HPA makes a decision to scale down from 4 replicas to 2.  There is no way to control which of the 2 replicas get terminated to scale down.  That means the HPA may attempt to terminate a replica that is 2.9 hours into processing a 3 hour queue message.

There are two main ways to handle this scenario.

### Leverage the container lifecycle

Kubernetes provides a few [lifecycle hooks](https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/) that can be leveraged to delay termination.  Imagine a replica is scheduled for termination and is 2.9 hours into processing a 3 hour message.  Kubernetes will send a [`SIGTERM`](https://www.gnu.org/software/libc/manual/html_node/Termination-Signals.html) to signal the intent to terminate.  Rather than immediately terminating, a deployment can delay termination until processing the current batch of messages has completed.  Kubernetes will wait for a `SIGTERM` response or the `terminationGracePeriodSeconds` before killing the replica.

> 💡 **NOTE:** There are other ways to delay termination, including the [`preStop` Hook](https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/#container-hooks).

Using this method can preserve a replica and enable long-running executions.  However, one downside of this approach is while delaying termination, the pod phase will remain in the `Terminating` state.  That means a pod that is delaying termination for a very long duration may show `Terminating` during that entire period of delay.

### Run as jobs

The other alternative to handling long-running executions is by running the event driven code in Kubernetes Jobs instead of Deployments or Custom Resources.  This approach is discussed [in the next section](../scaling-jobs).
